# windbreak

./: .gitattributes  .gitignore  .pip-audit-known-vulnerabilities  .pre-commit-config.yaml  .secrets.baseline  ACCOUNTING.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  EVALUATION.md  LEGAL_AND_COMPLIANCE.md  OPERATOR_WARNINGS.md  README.md  RUNBOOK.md  SECURITY.md  constraints-quality.txt  dashboard.html  metrics.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: chief-architect.md  dependency-checker.md  documentation.md  performance.md  quality-reviewer.md  ralph-chief-architect.md  ralph-code-review-orchestrator.md  ralph-dependency-review-specialist.md  ralph-documentation-specialist.md  ralph-implementation-specialist.md  ralph-performance-specialist.md  ralph-security-specialist.md  ralph-test-specialist.md  ralph-worker.md  refactorer.md  security-auditor.md  test-generator.md
.claude/commands/: ralph-tick.md
.claude/docs/: principles.md  quality-standards.md  testing.md  tools.md  troubleshooting.md  workflow.md
.github/: deslop-areas.json
.github/workflows/: _claude-scan.yml  ci.yml  code-review.yml  dependabot-to-ralph-issue.yml  deslop.yml  hopper.yml  (+18 more)
deploy/: docker-compose.yml
docs/: RUNBOOK.md  dashboard.html  metrics.json
git-issues/: 2026-07-04_SPEC_summary.md  2026-07-08_live_forecasting_decomposition.md  EPIC_01_ISSUE_01_skeleton-run-loop.md  EPIC_01_ISSUE_02_typed-config-loader.md  EPIC_01_ISSUE_03_fixed-point-types.md  EPIC_01_ISSUE_04_hash-chained-ledger.md  EPIC_01_ISSUE_05_logging-alerts.md  EPIC_01_ISSUE_06_deploy-skeletons-dashboard-stub.md  EPIC_01_foundations.md  EPIC_02_ISSUE_01_connector-skeleton.md  EPIC_02_ISSUE_02_kalshi-adapter.md  EPIC_02_ISSUE_03_fees-balance-semantics.md  EPIC_02_ISSUE_04_paper-exchange.md  EPIC_02_ISSUE_05_data-quality-freshness.md  EPIC_02_ISSUE_06_contract-suite-screener.md  EPIC_02_connector.md  EPIC_03_ISSUE_01_skeleton.md  EPIC_03_ISSUE_02_triage.md  EPIC_03_ISSUE_03_research-sandbox.md  EPIC_03_ISSUE_04_ensemble-coherence.md  EPIC_03_ISSUE_05_citations-abstention.md  EPIC_03_ISSUE_06_injection-defense.md  EPIC_03_ISSUE_07_canary-budget.md  EPIC_03_forecast_engine.md  EPIC_04_ISSUE_01_kernel-skeleton.md  EPIC_04_ISSUE_02_floor-invariant.md  EPIC_04_ISSUE_03_reservations-tokens.md  EPIC_04_ISSUE_04_readonly-verification.md  EPIC_04_ISSUE_05_promotion-demotion.md  EPIC_04_ISSUE_06_floor-governance.md  EPIC_04_ISSUE_07_kill-switch.md  EPIC_04_ISSUE_08_property-mutation-hardening.md  EPIC_04_risk_kernel.md  EPIC_05_ISSUE_01_skeleton-gateway-process.md  EPIC_05_ISSUE_02_submission-path.md  EPIC_05_ISSUE_03_reduce-only-closes.md  EPIC_05_ISSUE_04_crash-recovery-reconciler.md  EPIC_05_ISSUE_05_adverse-selection-sweeper.md  EPIC_05_ISSUE_06_chaos-suite.md  EPIC_05_order_gateway.md  (+32 more)
hedgekit/: __init__.py  __main__.py  logging_setup.py  main.py
plan/: 2026-07-05_BACKLOG_GROOMING.md  2026-07-15_BACKLOG_GROOMING.md  2026-07-16_BACKLOG_GROOMING.md
plans/: SPEC_v3.md
scripts/: README.md  analyze_mutations.py  architecture.sh  check-all.sh  collect_metrics.py  complexity.sh  coverage.sh  fix-all.sh  format.sh  lint.sh  lint_no_floats.py  mutation.sh  pr-status.sh  provision-venv.sh  record-cassettes.sh  record-research-cassettes.sh  record_futuresearch_cassette.py  record_research_cassettes.py  record_triage_stage0_cassette.py  record_vote_cassettes.py  run-canaries.sh  run_canaries.py  security.sh  test.sh  typecheck.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cli_config.py  test_cli_ledger_config.py  test_dashboard_process.py  test_logging_redaction.py  test_main.py  test_package_skeleton.py  test_process_flag.py  test_run_loop.py  test_run_riskkernel.py  test_signal_hygiene.py  test_snapshot_wiring.py
windbreak/: __init__.py  __main__.py  logging_setup.py  main.py
(+651 files in other folders)
