# pyproject.toml - Python project configuration

[project]
name = "windbreak"
version = "0.1.0"
description = "Open-source, locally hosted, always-on AI forecast trader for fully collateralized binary event markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Geoff Gallinger" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PyYAML>=6.0.1",
    "requests>=2.33.0",
]

[project.scripts]
windbreak = "windbreak.main:main"

[project.optional-dependencies]
dev = [
    # Versions are pinned by constraints-quality.txt (issue #104); install with
    # `pip install -e .[dev] -c constraints-quality.txt`
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pip-audit>=2.7.0",
    "radon>=6.0.0",
    "mutmut>=2.4.0",
    "pre-commit>=3.4.0",
    "types-requests>=2.32",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["windbreak*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=windbreak",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "-p",
    "pytester",
]
markers = [
    "chaos: fault-injection chaos suite over the Order Gateway (SPEC §11.5); also selected standalone by the CI chaos job",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["windbreak"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.pep8-naming]
# ``http.server.BaseHTTPRequestHandler`` dispatches to ``do_<COMMAND>`` methods
# by name, so ``do_GET``/``do_POST`` are mandated by the stdlib contract, not a
# style choice.
extend-ignore-names = ["do_GET", "do_POST"]

[tool.bandit]
exclude_dirs = ["tests", "venv", "virtualenv"]

[tool.mutmut]
paths_to_mutate = "windbreak/"
backup = false
runner = "python -m pytest --exitfirst --quiet --tb=no"
tests_dir = "tests/"
